2010-09-16  Andreas Schwab  <schwab@redhat.com>

	* elf/dl-close.c (free_slotinfo, free_mem): Move to...
	* elf/dl-libc.c (free_slotinfo, free_mem): ... here.

2010-09-21  Ulrich Drepper  <drepper@redhat.com>

	[BZ #12037]
	* posix/unistd.h: Undo change of feature selection for ftruncate from
	2010-01-11.

2010-09-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/strcmp.S: Fix another typo in x86-64 strncasecmp limit
	detection.

2010-09-20  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc32/syscalls.list: Add
	fanotify_mark.
	* sysdeps/unix/sysv/linux/s390/s390-32/syscalls.list: Likewise.

2010-09-14  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/s390/s390-32/__longjmp.c (__longjmp): Define register
	variables after CHECK_SP call.
	* sysdeps/s390/s390-64/__longjmp.c (__longjmp): Likewise.

2010-09-13  Andreas Schwab  <schwab@redhat.com>
	    Ulrich Drepper  <drepper@redhat.com>

	* elf/rtld.c (dl_main): Set GLRO(dl_init_all_dirs) just before
	re-relocationg ld.so.
	* elf/dl-support.c (_dl_non_dynamic_init): And here after the
	_dl_init_paths call.
	* elf/dl-load.c (_dl_init_paths).  Don't set GLRO(dl_init_all_dirs)
	here anymore.

2010-09-14  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_init.c (__res_vinit): Count the default server we added.

2010-09-08  Chung-Lin Tang  <cltang@codesourcery.com>
	    Ulrich Drepper  <drepper@redhat.com>

	[BZ #11968]
	* sysdeps/unix/sysv/linux/x86_64/____longjmp_chk.S
	(____longjmp_chk): Use %ebx for saving value across system call.
	Add unwind info.

2010-09-06  Andreas Schwab  <schwab@redhat.com>

	* manual/Makefile: Don't mix pattern rules with normal rules.

2010-09-05  Andreas Schwab  <schwab@linux-m68k.org>

	* debug/vdprintf_chk.c (__vdprintf_chk): Remove undefined
	operation.
	* libio/iofdopen.c (_IO_new_fdopen): Likewise.
	* libio/iofopncook.c (_IO_cookie_init): Likewise.
	* libio/iovdprintf.c (_IO_vdprintf): Likewise.
	* libio/oldiofdopen.c (_IO_old_fdopen): Likewise.